[gd_scene load_steps=11 format=3 uid="uid://cg5id4dgxp4ub"]

[ext_resource type="Script" path="res://Assets/Enemies/Raven_02_Spawner.gd" id="1_jxtgj"]
[ext_resource type="PackedScene" uid="uid://dmbodtb67ycs3" path="res://Assets/Scene/Component/orb_drop_component.tscn" id="2_81hbw"]
[ext_resource type="PackedScene" uid="uid://bx83g2vdm4dex" path="res://Assets/Scene/game_objects/Destroyed_Objects/Raven_02_Spawner_dead.tscn" id="3_1rihy"]
[ext_resource type="PackedScene" uid="uid://c1gnol8gqyu7s" path="res://Assets/Scene/Component/health_component.tscn" id="3_qgpfd"]
[ext_resource type="PackedScene" uid="uid://nro3glw2xb4p" path="res://Assets/Scene/Component/hurtbox_component.tscn" id="4_ei2b6"]
[ext_resource type="PackedScene" uid="uid://csljirmwo8vcg" path="res://Assets/Scene/Component/health_bar.tscn" id="4_n333f"]
[ext_resource type="Texture2D" uid="uid://xbxd0yc76l6n" path="res://Assets/Enemies/Raven_02_spawner_base.png" id="5_o4dvy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ercf5"]
radius = 90.0888

[sub_resource type="CircleShape2D" id="CircleShape2D_n74e4"]
radius = 70.4557

[sub_resource type="CircleShape2D" id="CircleShape2D_q5l8a"]
radius = 250.0

[node name="RavenNest" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(0.5, 0.5)
collision_layer = 16
collision_mask = 17
motion_mode = 1
script = ExtResource("1_jxtgj")

[node name="orb_drop_component" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("2_81hbw")]
orb_Scene = ExtResource("3_1rihy")
highscore_amount = 1000
health_component = NodePath("../HealthComponent")

[node name="HealthComponent" parent="." instance=ExtResource("3_qgpfd")]
max_health = 5.0

[node name="HealthBar" parent="." instance=ExtResource("4_n333f")]

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_ei2b6")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_ercf5")
debug_color = Color(0.984314, 0.121569, 0, 0.0823529)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2.555, 2.555)
texture = ExtResource("5_o4dvy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_n74e4")

[node name="DetectArea2D" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea2D"]
shape = SubResource("CircleShape2D_q5l8a")
debug_color = Color(0.654902, 0.517647, 0, 0.419608)
